Fix overflow issue with splash background

--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -293,6 +293,7 @@ section section {
   width: 500px;
   z-index: -1;
   pointer-events: none;
+  overflow: hidden;
 
   opacity: var(--splash-opacity);
   filter: blur(var(--blur));
@@ -322,10 +323,12 @@ body > header {
   h1 {
     font-size: calc(var(--title-size) * (2 / 3));
     color: var(--title);
+    white-space: nowrap;
   }
 
   h2 {
     font-size: calc(var(--title-size) * (1 / 3));
+    white-space: nowrap;
   }
 }
 
@@ -410,7 +413,7 @@ main {
       left: 0;
     }
 
-    header {
+    body > header {
       text-align: center;
     }
 
